src/test/ui/issues/issue-12187-1.stderr
error[E0282]: type annotations needed for `&T`
  --> $DIR/issue-12187-1.rs:6:10
   |
LL |     let &v = new();
   |          ^ cannot infer type
   |
help: consider giving this binding the explicit type `&T`, with the type parameters specified
   |
LL |     let &v: &T = new();
   |           ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
